# db-vault

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/db_vault/: __init__.py  __main__.py  logging.py
src/db_vault/cli/: app.py  backup.py  config_cmd.py  restore.py  schedule.py
src/db_vault/compression/: compressor.py
src/db_vault/core/: config.py  exceptions.py  models.py
src/db_vault/engines/: __init__.py  base.py  mongodb.py  mysql.py  postgres.py  sqlite.py
src/db_vault/notifications/: base.py  slack.py
src/db_vault/scheduler/: scheduler.py
src/db_vault/storage/: __init__.py  base.py  local.py  s3.py
tests/: conftest.py
tests/unit/: test_cli.py  test_compression.py  test_config.py  test_engines.py  test_local_storage.py  test_models.py  test_notifications.py  test_sqlite_engine.py
